<?xml version="1.0"?>
<package>
  <name>hexapod_controller</name>
  <version>0.0.1</version>
  <description>Controller package for hexapod research platform</description>
  <author email="ryandzulfiqarr@gmail.com">Ryan Dzulfiqar Rashif</author>
  <maintainer email="ryandzulfiqarr@gmail.com">Ryan Dzulfiqar Rashif</maintainer>
  <license>None</license>
  
  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hexapod_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>hexapod_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_controller.xml" />
  </export>
</package>
