<?xml version="1.0"?>
<package>
  <name>hexapod_description</name>
  <version>0.0.1</version>
  <description>Description package for hexapod research platform</description>
  <author email="ryandzulfiqarr@gmail.com">Ryan Dzulfiqar Rashif</author>
  <maintainer email="ryandzulfiqarr@gmail.com">Ryan Dzulfiqar Rashif</maintainer>
  <license>None</license>
  
  <url type="website">http://ros.org</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- definitions -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
