<?xml version="1.0"?>
<package>
  <name>Hexapod Sound</name>
  <version>0.0.1</version>
  <description>Sound package for hexapod research platform</description>
  <author email="ryandzulfiqarr@gmail.com">Ryan Dzulfiqar Rashif</author>
  <maintainer email="ryandzulfiqarr@gmail.com">Ryan Dzulfiqar Rashif</maintainer>
  <license>None</license>
  
  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hexapod_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sound_play</build_depend>
  <run_depend>hexapod_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sound_play</run_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_sound.xml" />
  </export>
</package>
